--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 
 <body>
@@ -36,38 +38,38 @@
         </ul>
 
         <div class="top-btnn">
-            <a href="#" class="h-btn">Contact us</a>
+            <a href="#contact" class="h-btn">Contact us</a>
         </div>
     </header>
 
     <!-------------- hero ------------->
     <section class="hero" id="home">
-        <div class="main-content">
+        <div class="main-content" data-aos="fade-in">
             <h4>Hi, There!</h4>
             <h1>I'm <span>Prema Barua</span></h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur,
                 nihil voluptas optio sapiente laudantium?</p>
             <div class="social">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-linkedin-fill"></i></a>
-                <a href="#"><i class="ri-github-fill"></i></a>
-                <a href="#"><i class="ri-instagram-fill"></i></a>
+                <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
+                <a href="https://www.linkedin.com/in/prema-barua/" target="_blank"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://github.com/premabarua2310" target="_blank"><i class="ri-github-fill"></i></a>
+                <a href="#" target="_blank"><i class="ri-instagram-fill"></i></a>
             </div>
 
             <div class="main-btn">
-                <a href="#" class="btn">Hire me</a>
-                <a href="#" class="btn btn2">Download CV</a>
+                <a href="#contact" class="btn">Hire me</a>
+                <a href="https://drive.google.com/file/d/1KV-hbkG2NVKQF9-uZoYvTUR1Wi8f38jE/view?usp=sharing" target="_blank" class="btn btn2">Download CV</a>
             </div>
         </div>
     </section>
 
     <!-------------- about ------------->
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="img/about.jpg" alt="">
+        <div class="about-img" data-aos="zoom-in-down">
+            <img src="img/prema1.png" alt="">
         </div>
 
-        <div class="about-text">
+        <div class="about-text" data-aos="zoom-in-up">
             <h2>I am a Web <span>Developer</span> & Designer</h2>
             <div class="exp-area">
                 <p class="exp">Experience:
@@ -87,16 +89,16 @@
                     <span>+8801531784954</span>
                 </p>
             </div>
-            <a href="#" class="btn">View All Projects</a>
+            <a href="#portfolio" class="btn">View All Projects</a>
         </div>
     </section>
 
     <!-------------- services ------------->
     <section class="services" id="services">
-        <div class="center-text">
+        <div class="center-text" data-aos="fade-down">
             <h2>My <span>Services</span></h2>
         </div>
-        <div class="services-content">
+        <div class="services-content" data-aos="zoom-in-up">
             <div class="box">
                 <img src="img/s-1.svg" alt="">
                 <h3>Web Designer</h3>
@@ -131,107 +133,135 @@
 
     <!-------------- portfolio ------------->
     <section class="portfolio" id="portfolio">
-        <div class="center-text">
+        <div class="center-text" data-aos="fade-down">
             <h2>My <span>Portfolio</span></h2>
         </div>
-        <div class="portfolio-content">
+        <div class="portfolio-content" data-aos="zoom-in-up">
             <div class="row">
-                <img src="img/port-1.jpg" alt="">
+                <img src="img/port1.png" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Tour Website</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
+                        <a href="https://github.com/premabarua2310/Tour-Website" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://tour-website-a5e0ff.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
+                        
                     </div>
-                    <h4>Login page with nextjs</h4>
                 </div>
+                <h4>Tour website with html, css</h4>
             </div>
 
             <div class="row">
-                <img src="img/port-2.jpg" alt="">
+                <img src="img/port2.png" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Login Page</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
+                        <a href="https://github.com/premabarua2310/login_nextjs" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://login-page-53df53.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
                     </div>
-                    <h4>Login page with nextjs</h4>
                 </div>
+                <h4>Login page with nextjs</h4>
             </div>
 
             <div class="row">
-                <img src="img/port-3.jpg" alt="">
+                <img src="img/port3.png" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Ecommerce Website</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
+                        <a href="https://github.com/premabarua2310/Ecommerce_js" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://eceommercejs-ae08ce.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
                     </div>
-                    <h4>Login page with nextjs</h4>
                 </div>
+                <h4>Ecommerce website with js</h4>
+            </div> 
+
+            <div class="row">
+                <img src="img/port5.png" alt="">
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Portfolio Website</h5>
+                    </div>
+                    <div class="row-icon">
+                        <a href="https://github.com/premabarua2310/Protfolio-website" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://demo-portfolio-993b5c.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
+                    </div>
+                </div>
+                <h4>Portfolio website with js</h4>
             </div>
 
             <div class="row">
-                <img src="img/port-4.jpg" alt="">
+                <img src="img/port3.png" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Ecommerce Website</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
+                        <a href="https://github.com/premabarua2310/Tour-Website" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://tour-website-a5e0ff.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
                     </div>
-                    <h4>Login page with nextjs</h4>
                 </div>
+                <h4>Login page with nextjs</h4>
             </div>
 
             <div class="row">
-                <img src="img/port-5.jpg" alt="">
+                <img src="img/port4.png" alt="">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Company Website</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
+                        <a href="https://github.com/premabarua2310/strict" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://bright-conkies-0ea3d0.netlify.app/" target="_blank"><i class="ri-global-fill"></i></a>
                     </div>
-                    <h4>Login page with nextjs</h4>
                 </div>
+                <h4>Psd to HTML</h4>
             </div>
 
-            <div class="row">
-                <img src="img/port-6.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="ri-github-fill"></i>
-                        <i class="ri-global-fill"></i>
-                    </div>
-                    <h4>Login page with nextjs</h4>
-                </div>
-            </div>
         </div>
     </section>
 
+    <!-------------- contact ------------->
+    <section class="contact" id="contact">
+        <div class="center-text" data-aos="fade-down">
+            <h2>Contact <span>Me</span></h2>
+        </div>
+        <div class="contact-form" data-aos="zoom-in">
+            <form action="">
+                <input type="text" placeholder="Your name" required>
+                <input type="email" placeholder="Email address.." required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Write message here" required></textarea>
+                <input type="submit" name="" value="Send message" class="send-btn">
+            </form>
+        </div>
+    </section>
 
-
-
-
-
-
+    <!-------------- footer ------------->
+    <div class="footer">
+        <div class="copyright">
+            <p>2023 Prema Barua, All Rights Reserved</p>
+        </div>
+        <a href="#home" class="scroll-top">
+            <i class="ri-arrow-up-s-fill"></i>
+        </a>
+    </div>
 
 
 
     <!-------------- Js link ------------->
     <script src="js/script.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 300,
+        duration: 1400,
+      });
+    </script>
 </body>
 
 </html>
